js/js.translator/testData/incremental/invalidation/enumEntriesInlining/main/m.kt
@kotlin.ExperimentalStdlibApi
fun box(stepId: Int, isWasm: Boolean): String {
    when {
        !testEnumEntries(stepId) -> return "Fail testEnumEntries"
    }
    return "OK"
}
